logout function, speeddial not covering and infinite loading at homepage fixed

--- a/src/math.css
+++ b/src/math.css
@@ -7,6 +7,7 @@
     font-family: sans-serif;
 }
 body {
+    z-index: -10;
     min-height: 100vh;
     width: 100%;
     background: linear-gradient(pink,blue);
@@ -143,7 +144,7 @@ p {
 }
 
 #nav {
-    width: 100vw;
+    width: 0px;
     position: absolute;
     right: 0;
     bottom: 0px;
